# cppTest

./: .gitignore  CMakeLists.txt  main.cpp
src/: Chrono.cpp  Chrono.h  Logger.cpp  Logger.h  StringUtil.cpp  StringUtil.h  WebInterface.cpp  WebInterface.h
tst/: CMakeLists.txt  TestTrite.cpp  TestTypeErasure.cpp
